# containerd-wasm-shims

./: Makefile
.github/workflows/: build.yaml  ci.yaml  release.yaml
containerd-shim-lunatic-v1/: Cargo.toml  Dockerfile
containerd-shim-lunatic-v1/src/: main.rs
containerd-shim-slight-v1/: Cargo.toml
containerd-shim-spin/: Cargo.toml
containerd-shim-spin-v1/: Cargo.toml
containerd-shim-spin-v1/src/: youki.rs
containerd-shim-spin/src/: engine.rs
deployments/k3d/: Dockerfile
deployments/k3d/workload/: workload.yaml
images/lunatic/: Dockerfile
images/lunatic-spawn/: Dockerfile
images/lunatic-submillisecond/: Dockerfile
scripts/: up.sh
