[package]
name = "containerd-shim-lunatic-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-shim = { git = "https://github.com/containerd/rust-extensions", rev = "7f7e3117a6ecb49e5e3b48b4f457a4914d2f2b93" }
containerd-shim-wasm = { git = "https://github.com/containerd/runwasi", rev = "006b95f8aec41b0872e5472b718381468c36cb8a" }
libcontainer = { version = "0.1", features = ["v2"], default-features = false }
nix = "0.26.2"
serde = "1.0.183"
serde_json = "1.0.104"
thiserror = "1.0.44"
log = "~0.4"
libc = "0.2.147"
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["std"] }
lunatic-process = { git = "https://github.com/lunatic-solutions/lunatic"}
lunatic-process-api = { git = "https://github.com/lunatic-solutions/lunatic"}
lunatic-distributed = { git = "https://github.com/lunatic-solutions/lunatic"}
lunatic-runtime = { git = "https://github.com/lunatic-solutions/lunatic"}
clap = { version = "4.0", features = ["cargo", "derive"] }
tokio = "1.30.0"
# https://github.com/sfackler/rust-openssl/issues/603#issuecomment-822619837
openssl = { version = "0.10", features = ["vendored"] }