[package]
name = "containerd-shim-spin-v1"
version = "0.9.1"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
youki = { version = "0.2.0", git = "https://github.com/0xE282B0/youki" , branch = "libyouki-0.2.0", default-features=false, optional = true }
containerd-shim = "0.5.0"
containerd-shim-wasm = { version = "0.2.1", git = "https://github.com/0xE282B0/runwasi" , branch = "expose-executor", features = ["cgroupsv2"] }
#containerd-shim-wasm = { version = "0.2.1", path = "../../runwasi/crates/containerd-shim-wasm", features = ["cgroupsv2"] }
log = "0.4"
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-trigger-http = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-redis-engine = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-manifest = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-loader = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
wasmtime = "10.0.1"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.3"
anyhow = "1.0"
protobuf-codegen = "=3.2.0"

[features]
default = ["youki"]
youki = ["dep:youki"]

[workspace]

[[bin]]
name = "youki-spin"
path = "src/youki.rs"
required-features = ["youki"]